# solong

./: .gitignore  CMakeLists.txt  Makefile  animation.c  animation.h  bullet.c  bullet.h  command.c  command.h  config.yml  editor_scene.c  editor_scene.h  entity.c  entity.h  fonts.c  fonts.h  framerate.c  framerate.h  game.h  game_map.c  game_map.h  game_object.c  game_object.h  graphics.c  graphics.h  keys.c  keys.h  loader.c  main.c  main_scene.c  main_scene.h  map.ber  menu.ber  menu_scene.c  menu_scene.h  physics.c  physics.h  player.c  player.h  render.c  (+14 more)
assets/: battle_city.xpm  bonuses_spritesheet.xpm  bullet_spritesheet.xpm  digits.xpm  effects_spritesheet.xpm  orel_spritesheet.xpm  paper_1.xpm  paper_2.xpm  paper_3.xpm  paper_4.xpm  respawn_spritesheet.xpm  tank_green_spritesheet.xpm  tank_red_spritesheet.xpm  tank_white_spritesheet.xpm  tank_yellow_spritesheet.xpm  terrain_spritesheet.xpm  wall_1.xpm  wall_2.xpm  wall_3.xpm  wall_4.xpm
assets/heroes/knight/: knight_idle_anim_f0.xpm  knight_idle_anim_f1.xpm  knight_idle_anim_f2.xpm  knight_idle_anim_f3.xpm  knight_idle_anim_f4.xpm  knight_idle_anim_f5.xpm  knight_idle_spritesheet.xpm  knight_run_anim_f0.xpm  knight_run_anim_f1.xpm  knight_run_anim_f2.xpm  knight_run_anim_f3.xpm  knight_run_anim_f4.xpm  knight_run_anim_f5.xpm  knight_run_spritesheet.xpm  weapon_sword_1.xpm
assets/tiles/floor/: door_floor.xpm  floor_1.xpm  floor_10.xpm  floor_2.xpm  floor_3.xpm  floor_4.xpm  floor_5.xpm  floor_6.xpm  floor_7.xpm  floor_8.xpm  floor_9.xpm  floor_side.xpm  floor_side2.xpm  floor_side3.xpm  floor_side4.xpm  floor_side5.xpm  floor_side_left.xpm  floor_side_right.xpm  floor_stair.xpm  spikes_anim_f0.xpm  spikes_anim_f1.xpm  spikes_anim_f2.xpm  spikes_anim_f3.xpm  spikes_anim_f4.xpm  spikes_anim_f5.xpm  spikes_anim_f6.xpm  spikes_anim_f7.xpm  spikes_anim_f8.xpm  spikes_anim_f9.xpm  spikes_spritesheet.xpm  stair_nextlevel.xpm
assets/tiles/wall/: door_anim_opening_f0.xpm  door_anim_opening_f1.xpm  door_anim_opening_f10.xpm  door_anim_opening_f11.xpm  door_anim_opening_f12.xpm  door_anim_opening_f13.xpm  door_anim_opening_f2.xpm  door_anim_opening_f3.xpm  door_anim_opening_f4.xpm  door_anim_opening_f5.xpm  door_anim_opening_f6.xpm  door_anim_opening_f7.xpm  door_anim_opening_f8.xpm  door_anim_opening_f9.xpm  door_closed.xpm  door_fullyopen.xpm  door_spritesheet.xpm  wall_1.xpm  wall_2.xpm  wall_3.xpm  wall_arch_left.xpm  wall_arch_right.xpm  wall_bottom.xpm  wall_bottom_inner_left.xpm  wall_bottom_inner_right.xpm  wall_bottom_left.xpm  wall_bottom_right.xpm  wall_crack.xpm  wall_side_left .xpm  wall_side_right.xpm  wall_top_1.xpm  wall_top_inner_left.xpm  wall_top_inner_left_2.xpm  wall_top_inner_right.xpm  wall_top_inner_right_2.xpm  wall_top_left.xpm  wall_top_right.xpm
ft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isdigit_str.c  ft_isprint.c  ft_itoa_base.c  ft_list_foreach.c  ft_list_foreach_if.c  ft_list_last.c  ft_list_remove_if.c  ft_list_reverse.c  ft_list_reverse_fun.c  ft_list_size.c  ft_list_sort.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstiter.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memset.c  ft_printf.h  ft_putendl_fd.c  ft_putnbr_fd.c  ft_split.c  ft_str_repeat.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strncmp.c  ft_strrchr.c  ft_strrev.c  ft_substr.c  ft_swap.c  ft_tolower.c  (+2 more)
levels/: level_0.map  level_1.map
lft/: ft_bubblesort.c  ft_bzero.c  ft_calloc.c  ft_create_elem.c  ft_isascii.c  ft_itoa.c  ft_list_at.c  ft_list_clear.c  ft_list_find.c  ft_list_merge.c  ft_list_push_back.c  ft_list_push_front.c  ft_list_push_params.c  ft_lstadd_back.c  ft_lstdelone.c  ft_lstlast.c  ft_lstmap.c  ft_lstsize.c  ft_memcpy.c  ft_memmove.c  ft_number.c  ft_parser.c  ft_pointer.c  ft_printf.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_split_reg.c  ft_str_ch.c  ft_strcmp.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strnlen.c  ft_strnstr.c  ft_strtrim.c  ft_toupper.c  get_next_line.c
mlx/: CMakeLists.txt  mlx.h  mlx_get_screen_size.m
utils/: CMakeLists.txt  bubblesort.c  create_elem.c  get_next_line.c  isdigit_str.c  itoa_base.c  list_at.c  list_clear.c  list_find.c  list_foreach.c  list_foreach_if.c  list_last.c  list_merge.c  list_push_back.c  list_push_front.c  list_push_params.c  list_remove_if.c  list_reverse.c  list_size.c  list_sort.c  strrev.c  swap.c  time.c  toupper_str.c  utils.h
